...
            setupActions()
            setupAccessibility()
        }

        private func setupAccessibility() {
            searchButton.isAccessibilityElement = true
            searchButton.accessibilityIdentifier = "Home.ContentHeader.searchButton"

            filterButton.isAccessibilityElement = true
            filterButton.accessibilityIdentifier = "Home.ContentHeader.filterButton"
        }
        
        private func setupConstraints() {
            searchButton.snp.makeConstraints { make in
                make.leading.equalToSuperview().offset(16)
                make.centerY.equalToSuperview()
...
